# mpv-winbuild-cmake

./: .gitignore  .gitmodules  BUILD-MPV-COMPLETE.ps1  Build-MPV-HighFidelity.ps1  CMakeLists.txt  COMPLETE-BUILD-GUIDE.md  Download-Shaders.ps1  HIGH-FIDELITY-SETUP.md  README.md  README.rst  Setup-MPV-Config.ps1  autobuild.sh  cargo_config.in  ccache_conf.in  custom_steps.cmake  debpatch  exec.in  input-highfidelity.conf  meson_cross.txt.in  mpv-highfidelity.conf  svp-integration.conf  toolchain.cmake.in
.github/workflows/: build_clang.yml  custom_mpv_binaries.yml  llvm_clang.yml  main.yml  mpv_clang.yml  mpv_gcc.yml  upload_releases.yml
cleanup_script/: clean.sh
cmake/: ExternalProject.cmake  custom_steps.cmake  download_externalproject.cmake  packages_check.cmake  toolchain_check.cmake
extras/: README.md  angle_lib.7z
extras/angle_lib-i686/: PLACEHOLDER.md
scripts/: apply_davs2_patches.sh  apply_ffmpeg_patches.sh  autobuild.sh  build_mpvnet_portable.sh  update-repo.sh
toolchain/: CMakeLists.txt  binutils.cmake  cppwinrt.cmake  gcc-0016-disable-weak-refs-in-libstdc++.patch  gcc-base.cmake  gcc.cmake  gendef.cmake  libxml2-host.cmake  mimalloc-host.cmake  mingw-w64-0001-workaround-for-isystem-flag.patch  mingw-w64-0002-Add-64-bit-def-for-vulkan.patch  mingw-w64-0007-add-32-bit-defs-for-schannel-security.patch  mingw-w64-0008-d311-add-missing-d3d11-feature-enum.patch  mingw-w64-0008-d311-add-missing-enums.patch  mingw-w64-0009-dxgi-add-dxgi1_3.patch  mingw-w64-0010-d3d11-add-d3d11_2.patch  mingw-w64-0011-d3d11-add-d3d11_3.patch  mingw-w64-1.patch  mingw-w64-crt.cmake  mingw-w64-headers.cmake  mingw-w64.cmake  nasm.in  rustup.cmake  widl.cmake  winpthreads.cmake  zlib-host.cmake  zstd-host.cmake
toolchain/gcc/: gcc-binutils.cmake  gcc-compiler.in  gcc-ld.in  gcc-wrapper.cmake  gcc.cmake
toolchain/llvm/: llvm-clang.cmake  llvm-compiler-rt-builtin.cmake  llvm-compiler-rt.cmake  llvm-compiler.in  llvm-ld.in  llvm-libcxx.cmake  llvm-mingw.cmake  llvm-openmp-0001-support-static-lib.patch  llvm-openmp.cmake  llvm-wrapper.cmake  llvm.cmake
toolchain/mingw-headers/: d3dkmthk.h  d3dukmdt.h
toolchain/mingw-w64/: mingw-w64-crt.cmake  mingw-w64-gendef.cmake  mingw-w64-headers.cmake  mingw-w64-math.def  mingw-w64-winpthreads.cmake  mingw-w64.cmake
